# brawlifics

./: .dockerignore  .env.example  .gitignore  Dockerfile  Justfile  README.md  compose.yml  pyproject.toml  ruff.toml
.github/workflows/: publish.yml
assets/: backoffice.html  gallery.html  game.html  index.html
assets/css/: styles.css
assets/js/: backoffice.js  gallery.js  game.js  version.js
brawlifics/: server.py
brawlifics/lib/: config.py  game.py  logger.py  mqtt_client.py  player.py  routes.py  server.py  utils.py
deploy/: .env.example  compose.yml
deploy/etc/: logging.yaml  mosquitto.conf
etc/: logging.yaml  mosquitto.conf  mqtt_users
tests/: conftest.py  test_game.py  test_player.py  test_player_journey.py  test_server.py  utils.py
